18/12/2025 - Fixed "shove" actions unable to be sent 	↳ Actions passed through executePhase are copied into a local variable before passing so they can be altered 	↳ TODO: Do the same within the "shove" action itself so that one can call its .exe without it altering the sent action list
- Added golems back into the starting position

- Added simultaneous convert detection, behaviour now mimics "move" action in how multiple actions targeting the same square cancel out

19/12/2025
- Added newGame function to make resetting gamestate easier

- Allowed actions to be deleted from phases other than the currently selected phase

- Dimmed board when actions are sent

- Added "game over" window. (no functionality yet)
	↳ Made it invisible to avoid confusion

--- a/style.css
+++ b/style.css
@@ -57,6 +57,10 @@ body {
         filter: brightness(0.5);
     }
 
+    .board-button:disabled {
+        filter: brightness(0.5);
+    }
+
 .piece {
     position: absolute;
     top: 0;
@@ -101,7 +105,10 @@ body {
 
 
 .netcode-ui {
-    width: 16rem;
+    width: fit-content;
+    outline: solid;
+    outline-width: 3px;
+    padding: 4px 4px 4px 4px;
 }
 
     .netcode-ui input {
@@ -119,3 +126,10 @@ body {
     .action-menu button {
         width: 10rem;
     }
+
+.game-over-window {
+    width: fit-content;
+    outline: solid;
+    outline-width: 3px;
+    padding: 4px 4px 4px 4px;
+}
